[gd_scene load_steps=2 format=3 uid="uid://beocrjjnsxjiw"]

[ext_resource type="Script" path="res://scenes/game/icon_button.gd" id="1_hvggp"]

[node name="IconButton" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
icon_alignment = 1
script = ExtResource("1_hvggp")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
